<resources>
    <string name="app_name" translatable="false">Sepatu Bersih</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.
    </string>
    <string name="lorem_ipsum_backup" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_otp">Insert OTP</string>
    <string name="welcome">"Welcome %1$s"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_number">Not a valid phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="logout">Logout</string>
    <string name="not_signed_in_profile">Sign in to access profile</string>
    <string name="not_signed_in_order_list">Sign in to access order list</string>
    <string name="not_signed_in_order_form">Sign in to place an order</string>
    <string name="name">Name</string>
    <string name="name_cant_less">Your name cannot be less than 3 character</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="profile_edit">Profile edit</string>
    <string name="otp_title">Verification code</string>
    <string name="otp_sent_number">We have sent verification code to %1$s</string>
    <string name="otp_resend">Resend</string>
    <string name="otp_confirm">Confirm</string>
    <string name="success_update_profile">Success updating profile</string>
    <string name="ongoing_list">Ongoing</string>
    <string name="completed_list">Complete</string>
    <string name="not_assigned_list">Not assigned</string>
    <string name="home_welcome">Welcome, %1$s</string>
    <string name="services">Services</string>
    <string name="premium_shoes_cleaning" translatable="false">Premium Shoes Cleaning</string>
    <string name="address">Address</string>
    <string name="address_name">Address name</string>
    <string name="address_name_helper">Ex: Home</string>
    <string name="address_notes">Address notes</string>
    <string name="address_notes_helper">Ex: Near a market</string>
    <string name="add_address">Add address</string>
    <string name="success_add_address">Success adding address</string>
    <string name="update_address">Update address</string>
    <string name="success_update_address">Success updating address</string>
    <string name="choose_address">Choose pickup/delivery address</string>
    <string name="registered_address">Registered address</string>
    <string name="saved_address_empty">Your saved address is empty, please add one first</string>
    <string name="address_delete">Delete address</string>
    <string name="address_delete_confirmation">Do you want to delete %1$s?</string>
    <string name="shoes">Shoes</string>
    <string name="shoes_name">Shoes name</string>
    <string name="shoes_name_helper">Ex: Running shoes</string>
    <string name="shoes_brand_type">Shoes brand and type</string>
    <string name="shoes_brand_type_helper">Ex: Adidas superstar</string>
    <string name="shoes_color">Shoes color</string>
    <string name="shoes_color_helper">Ex: Red with white stripe</string>
    <string name="shoes_notes">Shoes notes</string>
    <string name="shoes_notes_helper">Ex: Yellow shoelace with heel crease</string>
    <string name="add_shoes">Add shoes</string>
    <string name="success_add_shoes">Success adding shoes</string>
    <string name="update_shoes">Update shoes</string>
    <string name="success_update_shoes">Success updating shoes</string>
    <string name="add_shoes_wash">Add shoes to wash</string>
    <string name="registered_shoes">Registered shoes</string>
    <string name="saved_shoes_empty">Your saved shoes is empty, please add one first</string>
    <string name="shoes_delete">Delete shoes</string>
    <string name="shoes_delete_confirmation">Do you want to delete %1$s?</string>
    <string name="name_cant_empty">Name cannot be empty</string>
    <string name="brand_type_cant_empty">Brand and type cannot be empty</string>
    <string name="color_cant_empty">Color cannot be empty</string>
    <string name="desc_cant_empty">Description cannot be empty</string>
    <string name="invalid_url">Web URL not valid</string>
    <string name="color_placeholder">Color: %1$s</string>
    <string name="notes_placeholder">Notes: %1$s</string>
    <string name="article">Article</string>
    <string name="article_list">Article list</string>
    <string name="add_article">Add article</string>
    <string name="success_add_article">Success adding article</string>
    <string name="update_article">Update article</string>
    <string name="success_update_article">Success updating article</string>
    <string name="article_name">Article name</string>
    <string name="article_name_helper">Ex: New outlet in Kayutangan</string>
    <string name="article_desc">Article description</string>
    <string name="article_desc_helper">Ex: Come by our new outlet</string>
    <string name="article_link">Article link</string>
    <string name="article_link_helper">Ex: https://www.sepatubersih.com/post?id=19</string>
    <string name="article_check_link">Check link</string>
    <string name="article_add_image">Add image</string>
    <string name="article_change_image">Change image</string>
    <string name="article_image">Article image</string>
    <string name="article_delete">Delete article</string>
    <string name="article_delete_confirmation">Do you want to delete %1$s article?</string>
    <string name="article_error_image">No image selected for article</string>
    <string name="order">Order</string>
    <string name="order_service">Order</string>
    <string name="home" translatable="false">Home</string>
    <string name="order_form">Order form</string>
    <string name="order_detail">Order detail</string>
    <string name="order_list">Order list</string>
    <string name="ongoing_order">Ongoing order</string>
    <string name="unassigned_order">Unassigned order</string>
    <string name="empty_order_filter">No order data with this filter</string>
    <string name="empty_ongoing">You haven\'t place any order</string>
    <string name="empty_completed">Your completed order is empty</string>
    <string name="need_verification">Need verification</string>
    <string name="pickup_queue">Pickup queue</string>
    <string name="pickup_process">Pickup process</string>
    <string name="arrived_on_store">Arrived on store</string>
    <string name="washing">Washing</string>
    <string name="finish_washing">Finish washing</string>
    <string name="delivery_queue">Delivery queue</string>
    <string name="delivery_process">Delivery process</string>
    <string name="customer_pickup">Customer self pickup</string>
    <string name="complete">Complete</string>
    <string name="canceled">Canceled</string>
</resources>