<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav_graph"
    app:startDestination="@id/orderListAdminFragment">

    <fragment
        android:id="@+id/orderListAdminFragment"
        android:name="com.aditasha.sepatubersih.presentation.admin.OrderListAdminFragment"
        android:label="@string/order_list">
        <action
            android:id="@+id/action_adminOrderListFragment_to_adminOrderDetailFragment"
            app:destination="@id/orderDetailAdminFragment" />
    </fragment>

    <fragment
        android:id="@+id/articleFragment"
        android:name="com.aditasha.sepatubersih.presentation.admin.ArticleAdminFragment"
        android:label="@string/article_list"
        tools:layout="@layout/fragment_article_admin" />

    <fragment
        android:id="@+id/orderDetailAdminFragment"
        android:name="com.aditasha.sepatubersih.presentation.admin.OrderDetailAdminFragment"
        android:label="@string/order_detail">
        <argument
            android:name="key"
            app:argType="string" />
    </fragment>
</navigation>