<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aditasha.sepatubersih.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_servicesDetailFragment"
            app:destination="@id/servicesDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.aditasha.sepatubersih.presentation.order.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.aditasha.sepatubersih.presentation.auth.LoginFragment"
        android:label="@string/action_sign_in_short"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.aditasha.sepatubersih.presentation.auth.RegisterFragment"
        android:label="@string/action_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.aditasha.sepatubersih.presentation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_profileBottomSheet"
            app:destination="@id/profileBottomSheet" />
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profileFragment_to_profileEditFragment"
            app:destination="@id/profileEditFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <dialog
        android:id="@+id/profileBottomSheet"
        android:name="com.aditasha.sepatubersih.presentation.profile.ProfileBottomSheet"
        tools:layout="@layout/fragment_profile_bottom_sheet">
        <argument
            android:name="tag"
            app:argType="string" />
        <action
            android:id="@+id/action_profileBottomSheet_to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
        <action
            android:id="@+id/action_profileBottomSheet_to_addShoesFragment"
            app:destination="@id/addShoesFragment" />
        <argument
            android:name="order"
            android:defaultValue="false"
            app:argType="boolean" />
    </dialog>
    <fragment
        android:id="@+id/servicesDetailFragment"
        android:name="com.aditasha.sepatubersih.presentation.order.ServicesDetailFragment"
        android:label="fragment_services_detail"
        tools:layout="@layout/fragment_services_detail">
        <action
            android:id="@+id/action_servicesDetailFragment_to_orderFormFragment"
            app:destination="@id/orderFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.aditasha.sepatubersih.presentation.profile.ProfileEditFragment"
        android:label="@string/profile_edit"
        tools:layout="@layout/fragment_profile_edit" />
    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.aditasha.sepatubersih.presentation.profile.AddAddressFragment"
        android:label="@string/add_address"
        tools:layout="@layout/fragment_add_address">
        <argument
            android:name="address"
            android:defaultValue="@null"
            app:argType="com.aditasha.sepatubersih.domain.model.SbAddress"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/addShoesFragment"
        android:name="com.aditasha.sepatubersih.presentation.profile.AddShoesFragment"
        android:label="@string/add_shoes">
        <argument
            android:name="shoes"
            android:defaultValue="@null"
            app:argType="com.aditasha.sepatubersih.domain.model.SbShoes"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/orderFormFragment"
        android:name="com.aditasha.sepatubersih.presentation.order.OrderFormFragment"
        android:label="@string/order_form">
        <action
            android:id="@+id/action_orderFormFragment_to_profileBottomSheet"
            app:destination="@id/profileBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.aditasha.sepatubersih.presentation.order.OrderDetailFragment"
        android:label="@string/order_detail"
        tools:layout="@layout/fragment_order_detail">
        <argument
            android:name="key"
            app:argType="string" />
    </fragment>
</navigation>